--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :submitting_user %><br>
-    <%= f.text_field :submitting_user %>
+    <%= f.text_field :submitting_user_id %>
   </div>
   <div class="field">
     <%= f.label :subject_user %><br>
-    <%= f.text_field :subject_user %>
+    <%= f.text_field :subject_user_id %>
   </div>
   <div class="field">
     <%= f.label :comment %><br>
