--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>Submitting user:</strong>
-  <%= @rating.submitting_user %>
+  <%= @rating.submitting_user_id %>
 </p>
 
 <p>
   <strong>Subject user:</strong>
-  <%= @rating.subject_user %>
+  <%= @rating.subject_user_id %>
 </p>
 
 <p>
