--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -29,3 +29,12 @@
 <br>
 
 <%= link_to 'New Rating', new_rating_path %>
+
+<hr>
+
+<p>
+</p>
+
+<script>
+ markers = handler.addMarkers(<%=raw @hash.to_json %>);
+</script>
