--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -7,6 +7,8 @@
       <th>Submitting user</th>
       <th>Subject user</th>
       <th>Comment</th>
+      <th>Latitude</th>
+      <th>Longitude</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +20,8 @@
         <td><%= rating.submitting_user_id %></td>
         <td><%= rating.subject_user_id %></td>
         <td><%= rating.comment %></td>
+        <td><%= rating.latitude %></td>
+        <td><%= rating.longitude %></td>
         <td><%= link_to 'Show', rating %></td>
         <td><%= link_to 'Edit', edit_rating_path(rating) %></td>
         <td><%= link_to 'Destroy', rating, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -32,9 +36,33 @@
 
 <hr>
 
+
+<h1>This is a map!</h1>
 <p>
+  <div style="width: 800px;">
+    <div id="map" style="width: 800px; height: 800px">
+  </div>
 </p>
 
+
 <script>
+ handler = Gmaps.build('Google');
+ handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+   markers = handler.addMarkers([
+     {
+       "lat": 0,
+       "lng": 0,
+       "picture": {
+         "url": "http://people.mozilla.com/~faaborg/files/shiretoko/firefoxIcon/firefox-32.png",
+         "width":  32,
+         "height": 32
+       },
+       "infowindow": "hello!"
+     }
+   ]);
+   handler.bounds.extendWith(markers);
+   handler.fitMapToBounds();
+ });
+
  markers = handler.addMarkers(<%=raw @hash.to_json %>);
 </script>
