more locations on the map

--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -48,18 +48,7 @@
 <script>
  handler = Gmaps.build('Google');
  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-   markers = handler.addMarkers([
-     {
-       "lat": 53.4892,
-       "lng": -2.323,
-       "picture": {
-         "url": "http://people.mozilla.com/~faaborg/files/shiretoko/firefoxIcon/firefox-32.png",
-         "width":  32,
-         "height": 32
-       },
-       "infowindow": "hello!"
-     }
-   ]);
+   markers = handler.addMarkers(<%= raw(@hash.to_json) %> );
    handler.bounds.extendWith(markers);
    handler.fitMapToBounds();
  });
