--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -41,17 +41,45 @@
 <p>
   <div style="width: 800px;">
     <div id="map" style="width: 800px; height: 800px">
-  </div>
+    </div>
+    <div id="sidebar_container"></div>
 </p>
 
 
 <script>
+ function createSidebarLi(json){
+   return ("<li><a>" + json.name + "</a></li>");
+ };
+
+ function bindLiToMarker($li, marker){
+   $li.on('click', function(){
+     handler.getMap().setZoom(14);
+     marker.setMap(handler.getMap()); //because clusterer removes map property from marker
+     marker.panTo();
+     google.maps.event.trigger(marker.getServiceObject(), 'click');
+   })
+ };
+
+ function createSidebar(json_array){
+   _.each(json_array, function(json){
+     var $li = $( createSidebarLi(json) );
+     $li.appendTo('#sidebar_container');
+     bindLiToMarker($li, json.marker);
+   });
+ };
+
  handler = Gmaps.build('Google');
  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-   markers = handler.addMarkers(<%= raw(@hash.to_json) %> );
+   json_array = <%= raw(@hash.to_json) %>;
+   markers = handler.addMarkers(json_array);
+   _.each(json_array, function(json, index){
+     json.marker = markers[index];
+   });
+
+   createSidebar(json_array);
    handler.bounds.extendWith(markers);
    handler.fitMapToBounds();
  });
 
- markers = handler.addMarkers(<%=raw @hash.to_json %>);
+
 </script>
